// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event component should display correctly a successful event for a Recharge Subscription action 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="event"
    >
      <div
        class="content"
      >
        <div
          class="icon success"
          title="Success"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
        <span
          class="actionName"
        >
          Cancel subscription
           
          <a
            href="https://my-store.myshopify.com/tools/recurring/customers/sd478fs57dfds4f1/subscriptions/6"
            rel="noopener noreferrer"
            target="_blank"
          >
            6
          </a>
        </span>
        <span
          class="equalFiller"
        >
          on
        </span>
        <span
          class="actionName"
        >
          foo
        </span>
        <span
          class="equalFiller"
        >
          on
        </span>
        <span
          class="actionName"
        >
          Recharge
           
          (
          my-store
          )
        </span>
        <span
          class="filler"
        >
          by
        </span>
        <div
          class="AgentLabel"
        >
          <span
            aria-label="Acme Support icon"
            class="material-icons md-2"
          >
            account_circle
          </span>
          <span
            class="name"
          >
            Acme Support
          </span>
        </div>
        <button
          aria-disabled="false"
          class="wrapper arrow wrapper ghost ghost secondary medium"
          title="More details"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
      <div>
        MockedDatetimeLabel
      </div>
    </div>
    <div
      class="details d-none card"
    >
      <div
        class="card-body"
      >
        <div>
          <div>
            <div>
              <b>
                Subscription id
              </b>
              :
               
              6
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Event component should display the correct label for an action 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="event"
    >
      <div
        class="content"
      >
        <div
          class="icon success"
          title="Success"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
        <span
          class="actionName"
        >
          You should see me in snaps
           
        </span>
        <span
          class="equalFiller"
        >
          on
        </span>
        <span
          class="actionName"
        >
          foo
        </span>
        <span
          class="equalFiller"
        >
          on
        </span>
        <span
          class="actionName"
        >
          Recharge
           
          (
          my-store
          )
        </span>
        <span
          class="filler"
        >
          by
        </span>
        <div
          class="AgentLabel"
        >
          <span
            aria-label="Acme Support icon"
            class="material-icons md-2"
          >
            account_circle
          </span>
          <span
            class="name"
          >
            Acme Support
          </span>
        </div>
        <button
          aria-disabled="false"
          class="wrapper arrow wrapper ghost ghost secondary medium"
          title="More details"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            expand_more
          </i>
        </button>
      </div>
      <div>
        MockedDatetimeLabel
      </div>
    </div>
    <div
      class="details d-none card"
    >
      <div
        class="card-body"
      >
        <div>
          <div>
            <div>
              <b>
                Subscription id
              </b>
              :
               
              6
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
